--- a/mainproject/templates/base.html
+++ b/mainproject/templates/base.html
@@ -29,7 +29,7 @@
             <a href="{{ url_for('users.account') }}">Account</a>
         </li>
         <li class='nav-link'>
-            <a href="#">Create Post</a>
+            <a href="{{url_for('meme_post.create_meme')}}">Create Post</a>
         </li>
         <li class='nav-link'>
             <a href="#">Profile</a>
