--- a/mainproject/templates/index.html
+++ b/mainproject/templates/index.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %} {% block content %}
 <div class="jumbotron">
     <h1>Welcome Home</h1>
+    <p>Hello</p>
+
+
 </div>
-{% endblock %}
+
+<img src="{{meme_img}}" alt=""> {% endblock %}
