understood how image works..

--- a/mainproject/templates/index.html
+++ b/mainproject/templates/index.html
@@ -6,4 +6,4 @@
 
 </div>
 
-<img src="{{meme_img}}" alt=""> {% endblock %}
+<img src="{{url_for('static',filename= 'memes/'+meme_img)}}" alt=""> {% endblock %}
