--- a/mainproject/templates/base.html
+++ b/mainproject/templates/base.html
@@ -32,7 +32,7 @@
             <a href="{{url_for('meme_post.create_meme')}}">Create Post</a>
         </li>
         <li class='nav-link'>
-            <a href="#">Profile</a>
+            <a href="{{url_for('users.profile',username= current_user.username)}}">Profile</a>
         </li>
         {% else %}
 
