--- a/memeStackSite/mainproject/templates/base.html
+++ b/memeStackSite/mainproject/templates/base.html
@@ -8,12 +8,13 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
+    <!-- link css -->
+    <link rel="stylesheet" href="../static/css/style.css">
     <title>Document</title>
 </head>
 
 <body>
-    <ul class='nav'>
+    <!-- <ul class='nav'>
         <li class='nav-link'>
             <a href="{{ url_for('core.index') }}">Home</a>
         </li>
@@ -45,7 +46,52 @@
 
         {% endif %}
 
-    </ul>
+    </ul> -->
+
+
+
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="{{ url_for('core.index') }}">memeStack</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class='nav-item'>
+                        <a class="nav-link" href="{{ url_for('core.about') }}">About</a>
+                    </li>
+                    {% if current_user.is_authenticated %}
+                    <li class='nav-item'>
+                        <a class="nav-link" href="{{url_for('meme_post.create_meme')}}">Create Post</a>
+                    </li>
+                    <!-- <li class='nav-item'>
+                    <a class="nav-link" href="{{url_for('users.profile',username= current_user.username)}}">Profile</a>
+                </li> -->
+                    {% endif %}
+                </ul>
+                <ul class="navbar-nav ml-auto">
+                    {% if current_user.is_authenticated %}
+                    <li class="nav-item">
+                        <!-- {{ url_for('users.account') }} -->
+                        <a class="nav-link" href="{{url_for('users.profile',username= current_user.username)}}">{{current_user.username}}</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('users.logout') }}">Log out</a>
+                    </li>
+                    {% else %}
+                    <li class='nav-item'>
+                        <a class="nav-link" href="{{ url_for('users.login') }}">Login</a>
+                    </li>
+                    <li class='nav-item'>
+                        <a class="nav-link" href="{{ url_for('users.register') }}">Register</a>
+                    </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     <div class="container">
         {% block content %} {% endblock %}
