--- a/memeStackSite/mainproject/templates/index.html
+++ b/memeStackSite/mainproject/templates/index.html
@@ -3,14 +3,28 @@
     <h1>Welcome Home</h1>
 </div>
 
-
-{% for meme in memes %}
-<div class="card">
-    <div class="card-body">
-        <p>
-            <a href="{{url_for('meme_post.meme',meme_post_id= meme.id)}}">Click to see meme</a>
-        </p>
-        <img src="{{url_for('static',filename= 'memes/'+meme.meme_image)}}" alt="">
-    </div>
+<div class="card-columns">
+    {% for meme in memes %}
+    <!-- <div class="card">
+        <div class="card-body">
+            <p>
+                <a href="{{url_for('meme_post.meme',meme_post_id= meme.id)}}">Click to see meme</a>
+            </p>
+            <img src="{{url_for('static',filename= 'memes/'+meme.meme_image)}}" alt="">
+        </div>
+    </div> -->
+    <a href="{{url_for('meme_post.meme',meme_post_id= meme.id)}}">
+        <div class="card">
+            <img class="card-img-top" src="{{url_for('static',filename= 'memes/'+meme.meme_image)}}" alt="Card image cap">
+        </div>
+    </a>
+    {% endfor %}
 </div>
-{% endfor %} {% endblock %}
+{% endblock %}
+
+
+
+<!-- <div class="card-body">
+    <h5 class="card-title">Card title that wraps to a new line</h5>
+    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+</div> -->
