profile and index page design done, more or less...

--- a/memeStackSite/mainproject/static/css/style.css
+++ b/memeStackSite/mainproject/static/css/style.css
@@ -1,11 +1,36 @@
+/* main base.html */
+
+.mainContainer {
+    padding: 20px 80px;
+}
+
+.navbar-brand img {
+    height: 50px;
+}
+
+
+/* index and profile both */
+
 @media(max-width:567px) {
+    .navbar .nav-item {
+        padding-left: 15px;
+    }
+    .mainContainer {
+        padding: 10px 30px;
+    }
     .card-columns {
         column-count: 2 !important;
+    }
+    .user_setting {
+        display: none;
+    }
+    .create_post i {
+        color: #4d4c4c !important;
     }
 }
 
 .card-columns {
-    column-count: 4;
+    column-count: 6;
 }
 
 .card-columns .card {
@@ -17,4 +42,55 @@
 .card-columns .card img {
     border-radius: 10px !important;
     object-fit: cover;
+}
+
+.create_post {
+    background: white;
+    position: absolute;
+    border-radius: 50%;
+    right: 15px;
+    z-index: 10000;
+}
+
+.user_setting {
+    background: white;
+    position: absolute;
+    border-radius: 50%;
+    right: 15px;
+    top: 150px;
+    z-index: 10000;
+}
+
+.user_setting i {
+    font-size: 35px;
+    color: black;
+}
+
+.create_post i {
+    font-size: 35px;
+    color: black;
+}
+
+.create_post i:hover,
+.user_setting i:hover {
+    color: rgb(207, 16, 16);
+}
+
+
+/* profile */
+
+.profile_card .card {
+    border: 1px solid #dc3545 !important;
+}
+
+.profile_card .card img {
+    border-radius: 0px !important;
+}
+
+.profile_card .card-header {
+    color: black !important;
+}
+
+.profile_card .btn-outline-danger {
+    width: 100% !important;
 }
