--- a/memeStackSite/mainproject/templates/profile.html
+++ b/memeStackSite/mainproject/templates/profile.html
@@ -23,11 +23,16 @@
                 {{meme.meme_caption}}
             </div>
             <img class="card-img-top" src="{{url_for('static',filename= 'memes/'+meme.meme_image)}}" alt="Card image cap">
+            <!-- <br> -->
+            {% if user.username == current_user.username %}
             <div class="card-footer bg-transparent">
                 <form action="{{url_for('meme_post.delete_meme',meme_post_id = meme.id)}}" method="POST">
                     <input class="btn btn-outline-danger" type="submit" value="Delete">
                 </form>
             </div>
+            {% else %}
+            <div class="p-1"></div>
+            {% endif %}
         </div>
     </a>
     {% endfor %}
