form style added...

--- a/memeStackSite/mainproject/static/css/style.css
+++ b/memeStackSite/mainproject/static/css/style.css
@@ -118,3 +118,21 @@
     border-radius: 50%;
     object-fit: cover;
 }
+
+
+/* login */
+
+.login_style .login_form,
+.register_style .register_form {
+    margin-top: 40px;
+    background: #f8f8f8;
+    padding: 10px 20px 60px 20px;
+    border-radius: 10px;
+    border: 1px solid #c51a1d !important;
+}
+
+.register_form img,
+.login_form img {
+    text-align: center;
+    width: 100%;
+}
