--- a/memeStackSite/mainproject/templates/register.html
+++ b/memeStackSite/mainproject/templates/register.html
@@ -1,6 +1,42 @@
-{% extends "base.html" %} {% block content %}
-<form method="POST">
+{% extends "base.html" %}
+<!-- <br> -->
+{% block content %}
+<!-- <form method="POST">
     {{ form.hidden_tag() }} {{ form.email.label }} {{ form.email }} <br> {{ form.username.label }} {{ form.username }} <br> {{ form.password.label }} {{ form.password }} <br> {{ form.password_confirm.label }} {{ form.password_confirm }} <br> {{ form.submit()
     }}
-</form>
+</form> -->
+
+
+
+<div class="container register_style">
+    <div class="row">
+        <div class="col-sm-3"></div>
+        <div class="col-sm-6 register_form">
+            <a href="{{url_for('core.index')}}"><img src="{{url_for('static',filename='/images/logo2.png')}}" alt=""></a>
+            <form class="mt-3" method="POST">
+                {{ form.hidden_tag() }}
+                <!-- email -->
+                <div class="form-group">
+                    {{ form.email.label }} {{ form.email(class="form-control") }}
+                </div>
+                <!-- username -->
+                <div class="form-group">
+                    {{ form.username.label }} {{ form.username(class="form-control") }}
+                </div>
+                <!-- password -->
+                <div class="form-group">
+                    {{ form.password.label }} {{ form.password(class="form-control") }}
+                </div>
+                <!-- confirm password -->
+                <div class="form-group">
+                    {{ form.password_confirm.label }} {{ form.password_confirm(class="form-control") }}
+                </div>
+                {{ form.submit(class="btn btn-outline-dark") }}
+            </form>
+        </div>
+        <div class="col-sm-3"></div>
+    </div>
+</div>
+
+
 {% endblock %}
