--- a/memeStackSite/mainproject/static/css/style.css
+++ b/memeStackSite/mainproject/static/css/style.css
@@ -24,7 +24,8 @@
     .user_setting {
         display: none;
     }
-    .create_post i {
+    .create_post i,
+    .user_setting i {
         color: #4d4c4c !important;
     }
 }
@@ -46,7 +47,7 @@
 
 .create_post {
     background: white;
-    position: absolute;
+    position: fixed;
     border-radius: 50%;
     right: 15px;
     z-index: 10000;
@@ -54,7 +55,7 @@
 
 .user_setting {
     background: white;
-    position: absolute;
+    position: fixed;
     border-radius: 50%;
     right: 15px;
     top: 150px;
@@ -120,19 +121,35 @@
 }
 
 
-/* login */
+/* login, profile, account form */
 
+.create_meme_style .create_meme_form,
+.account_style .account_form,
 .login_style .login_form,
 .register_style .register_form {
     margin-top: 40px;
     background: #f8f8f8;
-    padding: 10px 20px 60px 20px;
+    padding: 10px 20px 30px 20px;
     border-radius: 10px;
     border: 1px solid #c51a1d !important;
+}
+
+.account_form img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
 }
 
 .register_form img,
 .login_form img {
     text-align: center;
     width: 100%;
+}
+
+
+/* create meme */
+
+.notMemeMsg {
+    border-radius: 10px;
 }
