--- a/memeStackSite/mainproject/templates/account.html
+++ b/memeStackSite/mainproject/templates/account.html
@@ -1,15 +1,39 @@
 {% extends "base.html" %} {% block content %}
-<div class="jumbotron">
+<!-- <div class="jumbotron">
     <div>
         <h1>Welcome to the page {{current_user.username}}</h1>
         <img src="{{url_for('static',filename= 'profile_pics/'+current_user.profile_image)}}" alt="">
     </div>
-
     <div class="">
         <form method="POST" action="" enctype="multipart/form-data">
             {{ form.hidden_tag() }} {{ form.username.label }} {{ form.username }} {{ form.email.label }} {{ form.email }} {{ form.picture.label }} {{ form.picture }} {{ form.submit() }}
-
         </form>
     </div>
+</div> -->
+<div class="container account_style">
+    <div class="row">
+        <div class="col-sm-3"></div>
+        <div class="col-sm-6 account_form">
+            <h3 class="mt-3">Account Settings</h3>
+            <img class="mt-3" src="{{url_for('static',filename= 'profile_pics/'+current_user.profile_image)}}" alt="">
+            <form class="mt-3" method="POST" enctype="multipart/form-data">
+                {{ form.hidden_tag() }}
+                <div class="form-group">
+                    {{ form.picture }}
+                </div>
+                <div class="form-group mt-3">
+                    {{ form.username.label }} {{ form.username(class="form-control") }}
+                </div>
+                <div class="form-group">
+                    {{ form.email.label }} {{ form.email(class="form-control") }}
+                </div>
+                {{ form.submit(class="btn btn-outline-dark") }}
+            </form>
+        </div>
+        <div class="col-sm-3"></div>
+    </div>
 </div>
+
+
+
 {% endblock %}
