--- a/memeStackSite/mainproject/templates/base.html
+++ b/memeStackSite/mainproject/templates/base.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <!-- link css -->
-    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="{{ url_for('static',filename='css/style.css') }}">
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/19b1b96522.js" crossorigin="anonymous"></script>
     <!-- jquery cdn -->
@@ -44,6 +44,9 @@
                 <li class="nav-item">
                     <!-- {{ url_for('users.account') }} -->
                     <a class="nav-link" href="{{url_for('users.profile',username= current_user.username)}}">{{current_user.username}}</a>
+                </li>
+                <li class="nav-item d-block d-lg-none">
+                    <a class="nav-link" href="{{ url_for('users.account') }}">Setting</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('users.logout') }}">Log out</a>
