--- a/memeStackSite/mainproject/templates/login.html
+++ b/memeStackSite/mainproject/templates/login.html
@@ -1,25 +1,28 @@
 {% extends "base.html" %}
 <!-- <br> -->
 {% block content %}
-<div class="container login_style">
-    <div class="row">
-        <div class="col-sm-3"></div>
-        <div class="col-sm-6 login_form">
-            <a href="{{url_for('core.index')}}"><img src="{{url_for('static',filename='/images/logo2.png')}}" alt=""></a>
-            <form class="mt-3" method="POST">
-                {{ form.hidden_tag() }}
-                <div class="form-group">
-                    {{ form.email.label }} {{ form.email(class="form-control") }}
-                </div>
-                <div class="form-group">
-                    {{ form.password.label }} {{ form.password(class="form-control") }}
-                </div>
-                {{ form.submit(class="btn btn-outline-dark") }}
-            </form>
+<div class="wrapper_login">
+    <div class="container login_style">
+        <div class="row">
+            <div class="col-sm-3"></div>
+            <div class="col-sm-6 login_form">
+                <a href="{{url_for('core.index')}}"><img src="{{url_for('static',filename='/images/logo2.png')}}" alt=""></a>
+                <form class="mt-3" method="POST">
+                    {{ form.hidden_tag() }}
+                    <div class="form-group">
+                        {{ form.email.label }} {{ form.email(class="form-control") }}
+                    </div>
+                    <div class="form-group">
+                        {{ form.password.label }} {{ form.password(class="form-control") }}
+                    </div>
+                    {{ form.submit(class="btn btn-outline-dark") }}
+                </form>
+            </div>
+            <div class="col-sm-3"></div>
         </div>
-        <div class="col-sm-3"></div>
     </div>
 </div>
+
 <!-- <form method="POST">
     {{ form.hidden_tag() }} {{ form.email.label }} {{ form.email }} <br> {{ form.password.label }} {{ form.password }} <br> {{ form.submit() }}
 </form> -->
