login and register page GUI updated...

--- a/memeStackSite/mainproject/static/css/style.css
+++ b/memeStackSite/mainproject/static/css/style.css
@@ -4,6 +4,15 @@
     padding: 20px 80px;
 }
 
+.bg_wallpaper {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/bg.png");
+    /* height: 50%; */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
 .navbar-brand img {
     height: 50px;
 }
